update: filter start & end airing year
